# nvngx-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  build.rs
.github/workflows/: ci.yml  lint.yml  nightly.yml
crates/api_gen/: Cargo.toml
crates/api_gen/src/: main.rs
crates/nvngx/: Cargo.toml
crates/nvngx-bin/: Cargo.toml
crates/nvngx-bin/src/: lib.rs
crates/nvngx-sys/: Cargo.toml  README.md  build.rs
crates/nvngx-sys/src/: bindings.h  bindings.rs  core_bindings.h  core_bindings.rs  directx.rs  dx.rs  dx_bindings.h  dx_bindings.rs  dx_helpers.c  dx_helpers.rs  dx_wrapper.h  error.rs  helpers.rs  lib.rs  library.rs  linked.rs  ngx_bindings.h  ngx_bindings.rs  vk.rs  vk_bindings.rs  vk_helpers.c  vk_source.c  vk_wrapper.h  vulkan.rs
crates/nvngx/src/: common.rs  lib.rs
crates/nvngx/src/dx/: feature.rs  mod.rs  ray_reconstruction.rs  super_sampling.rs
crates/nvngx/src/vk/: dispatch.rs  feature.rs  helpers.rs  mod.rs  ray_reconstruction.rs  super_sampling.rs
src/: directx.rs  dx_source.c  dx_wrapper.h  lib.rs  vulkan.rs
