[package]
name = "nvngx"
version = "0.1.4"
edition = "2024"
build = "build.rs"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX bindings."
readme = "README.md"
license = "MIT"
keywords = ["nvidia", "ngx", "DLSS", "upscaling", "supersampling"]
rust-version = "1.88"
repository = "https://github.com/iddm/nvngx-rs"
documentation = "https://docs.rs/nvngx-rs"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.28"

[dependencies]
widestring = "1.2.0"
libc = "0.2.174"
ash = "0.32.1"
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4"] }
derive_builder = "0.20.2"

[features]
default = ["windows", "rel", "dx", "vk"]
vk = []
dx = []
dev = []
rel = []
windows = []
linux = []