[package]
name = "nvngx-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
authors = ["Traverse Research <open-source@traverseresearch.nl>"]
description = "Prebuilt NVIDIA NGX (DLSS) shared libraries."
repository = "https://github.com/Traverse-Research/nvngx-rs"
