[package]
name = "nvngx-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX raw bindings."
readme = "README.md"
repository = "https://github.com/iddm/nvngx-rs"

include = [
    "/DLSS/lib/Windows_x86_64/x64/", # TODO: Skip _dbg variant?
    "/DLSS/lib/Linux_x86_64/libnvsdk_ngx.a",
    "/DLSS/include/",
    "/src/",
    "/build.rs",
]

[dependencies]
widestring = "1"
libc = "0.2"
ash = { version = "0.38", default-features = false }
