[package]
name = "nvngx"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX bindings."
readme = "README.md"
repository = "https://github.com/iddm/nvngx-rs"

[dependencies]
widestring = "1"
ash = "0.38"
libc = "0.2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
derive_builder = "0.12"
nvngx-sys = { version = "0.3.1",  path = "../nvngx-sys" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Direct3D12"] }
